# rajniti

./: .env.example  .gitignore  .pre-commit-config.yaml  BJP candidate data.py  BJP candidate data.txt  Dockerfile  Makefile  __init__.py  all candidatedata.py  app.py  candidatejson.py  candidateswise.py  config.py  congress data.py  constituencywise.py  data.py  docker-compose.yml  dockerfile  dummy.py  dummy2.py  flask app.py  partywise data .py  partywise data.py  partywise_data.py  partywiseresult.py  path.py  populate_states.py  pyproject.toml  readme.md  requirements.in  requirements.txt  results.json  run.py  shivsena data.py  test_data_api.py
LS-scrapper/: candidate.py  constituency.py  party.py
app/: __init__.py  app.py  config.py  models.py  populate_states.py  run.py
controllers/: candidate_controller.py  constituency_controller.py  party_controller.py  vs-candidate.py  vs-constituency.py
data/: DL-candidate.json  DL-constituency.json  MH-constituency.json  all_party_results.json  partywise_status.json
database/: __init__.py  db.py  models.py  populate.py
dummy_file/: dummy.py  dummy2.py
flask app/: README.md  VS_electionflask.py  constituencywise_flask.py  dummyflask.py  partywiseflask.py
html_files/: partywisewinresult-1U05.htm  partywisewinresult-369U05.htm  partywisewinresult.html  partywisewinresult.txt
path/: path.py
routes/: candidate.py  constituency.py  constituencydata.py  election.py  insert.py  party.py  partydata.py  scrape.py  verify.py
scrappers/: news.py  party.py
scrapping/: VS_Election.py  candidate.py  constituency.py  (+5 more)
(+158 files in other folders)
